# mario-clock-rs

./: Cargo.toml  README.md
.cargo/: config.toml
.github/workflows/: rust_ci.yml
src/: clock.rs  display_task.rs  hub75.rs  hub75_task.rs  main.rs  wifi_task.rs
src/display/: display_task.rs  hub75_task.rs  mod.rs
src/engine/: display.rs  eventbus.rs  game.rs  mod.rs  object.rs  tile.rs
src/mario/: clockface.rs  mod.rs
src/mario/gfx/: assets.rs  block.rs  font.rs  mario.rs  mod.rs
