[package]
name = "super-mario-clock"
version = "0.1.0"
edition = "2021"

[dependencies]
embassy-sync = { version = "0.6.2", features = [] }
embassy-time = { version = "0.4.0", features = [] }
static_cell = "2.1.0"
embassy-executor = { version = "0.7.0", features = ["task-arena-size-98304"] }
heapless = { version = "0.8.0", default-features = false }
esp-println = { version = "0.13.1", features = ["log", "esp32s3"] }
esp-hal-embassy = { version = "0.7.0", features = ["esp32s3"] }
esp-hal = { version = "1.0.0-beta.0", features = [
    "esp32s3",
    "psram",
    "unstable",
    "log",
] }
esp-wifi = { version = "0.13.0", features = [
    "esp32s3",
    "serde",
    "wifi",
    "log",
] }
esp-alloc = { version = "0.6.0" }
esp-backtrace = { version = "0.15.1", features = [
    "esp32s3",
    "exception-handler",
    "panic-handler",
    "println",
] }
embedded-graphics = { version = "0.8.1", features = [] }
embedded-hal = { version = "1.0.0", features = [] }
fugit = "0.3.7"

[profile.dev]
# Rust debug is too slow.
# For debug builds always builds with some optimization
opt-level = "s"

[profile.release]
codegen-units = 1        # LLVM can perform better optimizations using a single thread
debug = 2
debug-assertions = false
incremental = false
lto = 'fat'
opt-level = 's'
overflow-checks = false
